k8s/kq/kq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledgequest-service
spec:
  selector:
    app: knowledgequest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
